<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_accueil"
            android:icon="@drawable/ic_home"
            android:title="@string/txt_accueil" />
        <item
            android:id="@+id/nav_profil"
            android:icon="@mipmap/ic_profile_logo_foreground"
            android:title="@string/item_profile" />
        <item
            android:id="@+id/nav_historique"
            android:icon="@drawable/ic_feather_core_calendar"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_don_sang_query"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_location_sang"
            android:title="@string/menu_slideshow" />

    </group>
</menu>